// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General|Button Contained 1`] = `
Array [
  <div
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <button
      className="container contained primary compact"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Compact button
      </span>
    </button>
    <button
      className="container contained primary comfortable"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Comfortable button
      </span>
    </button>
    <button
      className="container contained primary comfortable"
      disabled={true}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Disabled button
      </span>
    </button>
  </div>,
  <div
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <button
      className="container contained primary signal compact"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Compact button
      </span>
    </button>
    <button
      className="container contained primary signal comfortable"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Comfortable button
      </span>
    </button>
    <button
      className="container contained primary signal comfortable"
      disabled={true}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Disabled button
      </span>
    </button>
  </div>,
]
`;

exports[`General|Button Frameless 1`] = `
Array [
  <div
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <button
      className="container frameless primary compact"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Compact button
      </span>
    </button>
    <button
      className="container frameless primary comfortable"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Comfortable button
      </span>
    </button>
    <button
      className="container frameless primary comfortable"
      disabled={true}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Disabled button
      </span>
    </button>
  </div>,
  <div
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <button
      className="container frameless primary signal compact"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Compact button
      </span>
    </button>
    <button
      className="container frameless primary signal comfortable"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Comfortable button
      </span>
    </button>
    <button
      className="container frameless primary signal comfortable"
      disabled={true}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Disabled button
      </span>
    </button>
  </div>,
]
`;

exports[`General|Button Outlined 1`] = `
Array [
  <div
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <button
      className="container outlined primary compact"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Compact button
      </span>
    </button>
    <button
      className="container outlined primary comfortable"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Comfortable button
      </span>
    </button>
    <button
      className="container outlined primary comfortable"
      disabled={true}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Disabled button
      </span>
    </button>
  </div>,
  <div
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <button
      className="container outlined primary signal compact"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Compact button
      </span>
    </button>
    <button
      className="container outlined primary signal comfortable"
      disabled={false}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Comfortable button
      </span>
    </button>
    <button
      className="container outlined primary signal comfortable"
      disabled={true}
      onClick={[Function]}
      onClickCapture={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <span
        className="button"
      >
        Disabled button
      </span>
    </button>
  </div>,
]
`;
